fix(Storage): work on URI instead of URL in shapefile store